# DTEAM-django-practical-test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  initial_data.json  pyproject.toml
CVProject/: settings.py  urls.py
audit/: admin.py  middlewares.py  models.py  urls.py  views.py
audit/migrations/: 0001_initial.py
audit/tests/: test_middlewares.py
main/: admin.py  api_urls.py  api_views.py  context_processors.py  forms.py  models.py  serializers.py  tasks.py  urls.py  utilities.py  views.py
main/migrations/: 0001_initial.py
main/tests/: test_cv_api.py  test_cv_views.py  test_models.py
nginx/conf.d/: default.conf
static/css/: styles.css
templates/: base.html
templates/audit/: requestlog_list.html
templates/includes/: cv_content.html  sidebar.html
templates/main/: cv_detail.html  cv_list.html  cv_pdf.html  settings.html
